--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ serde_json = "1.0.8"
 serde_derive = "1.0.24"
 serde_urlencoded = "0.5.4"
 
+sloggers = "0.3.2"
+slog = "2.4.1"
+
 [[example]]
 name = "hello_world"
 test = true
@@ -38,4 +41,8 @@ test = true
 
 [[example]]
 name = "shared_state"
+test = true
+
+[[example]]
+name = "logs"
 test = true
