--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,30 +19,45 @@ http = "0.1.7"
 bytes = "0.4"
 httparse = "1.1.2"
 regex = "1"
-serde = "1.0.24"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.8"
 serde_derive = "1.0.24"
-serde_urlencoded = "0.5.4"
+serde_urlencoded = "0.5.5"
+unicase = "2.3.0"
 
 sloggers = "0.3.2"
 slog = "2.4.1"
 
+[dev-dependencies]
+bencher = "0.1.5"
+
 [[example]]
 name = "hello_world"
-test = true
+# test = true
 
 [[example]]
 name = "post_body"
-test = true
+# test = true
 
 [[example]]
 name = "query_params"
-test = true
+# test = true
 
 [[example]]
 name = "shared_state"
-test = true
+# test = true
 
 [[example]]
 name = "logs"
-test = true
+# test = true
+
+[[bench]]
+name = "aa"
+harness = false
+
+[[bench]]
+name = "bb"
+harness = false
+
+[lints.clippy]
+allow = ["needless_range_loop"]
