--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = "1.0.24"
 serde_json = "1.0.8"
 serde_derive = "1.0.24"
 serde_urlencoded = "0.5.4"
+bravery_router = "0.1"
 
 sloggers = "0.3.2"
 slog = "2.4.1"
