--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,27 +10,21 @@ keywords = ["bravery", "fast", "http", "api"]
 repository = "https://github.com/allevo/bravery"
 
 [dependencies]
-tokio = "0.1.22"
-tokio-codec = "0.1.1"
-tokio-core = "0.1.17"
-tokio-io = "0.1"
-futures = "0.1.28"
-http = "0.1.18"
-bytes = "0.4"
+tokio = "0.2.0-alpha.5"
+bytes = "0.4.12"
 httparse = "1.3.4"
+http = "0.1.18"
 regex = "1.2.1"
 serde = "1.0.99"
 serde_json = "1.0.40"
 serde_derive = "1.0.99"
 serde_urlencoded = "0.6.1"
-bravery_router = "0.1"
+bravery_router = "0.1.3"
 sloggers = "0.3.3"
 slog = "2.5.2"
 percent-encoding = "2.1.0"
-
-[dev-dependencies]
-struct2swagger = { path = "../swagger/struct2swagger" }
-struct2swagger_derive = { path = "../swagger/struct2swagger_derive" }
+objekt = "0.1.2"
+futures-preview = "0.3.0-alpha.18"
 
 [[example]]
 name = "hello_world"
@@ -50,8 +44,4 @@ test = true
 
 [[example]]
 name = "logs"
-test = true
-
-[[swagger]]
-name = "swagger"
 test = true
