--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: rust
 cache: cargo
 
 rust:
-  - stable
-  - beta
+  - nightly
 
 before_script:
   - rustup component add clippy
@@ -14,3 +13,4 @@ script:
   # run tests
   - cargo test
   - cargo build --examples
+  - cargo doc
